--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,22 @@
     <artifactId>searcher</artifactId>
     <version>1.0</version>
 
+    <repositories>
+
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>https://download.java.net/maven/2/</url>
+        </repository>
+
+        <repository>
+            <id>morph</id>
+            <name>Repository for lemmatizer</name>
+            <url>https://repo.cuba-platform.com/content/groups/work/</url>
+        </repository>
+
+
+    </repositories>
     <build>
         <plugins>
             <plugin>
@@ -26,6 +42,17 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.13.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene.morphology</groupId>
+            <artifactId>russian</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
